[gd_scene load_steps=9 format=3 uid="uid://dv21dagw8l67i"]

[ext_resource type="Texture2D" uid="uid://cu1rnjixfrywe" path="res://assets/forest.png" id="1_fskfp"]
[ext_resource type="Texture2D" uid="uid://dnhlapg867wmt" path="res://assets/cursor.png" id="1_ggcyl"]
[ext_resource type="Script" path="res://scenes/levels/level/hud/hud.gd" id="1_s5ivw"]
[ext_resource type="ButtonGroup" uid="uid://r4hkhpy1i1ud" path="res://scenes/levels/level/hud/hud_button_group.tres" id="2_dbh43"]
[ext_resource type="Texture2D" uid="uid://b6bblxwyy7npk" path="res://assets/tile_projection.png" id="5_84njw"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_leipf"]
thickness = 30

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jtghy"]
color = Color(0, 0.513726, 0, 1)
thickness = 30

[sub_resource type="AtlasTexture" id="AtlasTexture_hfvus"]
atlas = ExtResource("1_fskfp")
region = Rect2(23, 88, 34, 38)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_s5ivw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="FoodBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxLine_leipf")
theme_override_styles/fill = SubResource("StyleBoxLine_jtghy")
show_percentage = false

[node name="Control" type="Control" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Cursor" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_dbh43")
flat = true

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/Cursor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/Cursor/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_ggcyl")
expand_mode = 1

[node name="Block" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_dbh43")
flat = true

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/Block"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/Block/MarginContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_hfvus")

[node name="BlockAmountLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/Block"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -28.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("5_84njw")

[connection signal="toggled" from="Control/MarginContainer/VBoxContainer/HBoxContainer/Cursor" to="." method="_on_cursor_toggled"]
[connection signal="toggled" from="Control/MarginContainer/VBoxContainer/HBoxContainer/Block" to="." method="_on_block_toggled"]
